# library-site

./: README.md  db.sqlite3  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20210616_2052.py  0003_auto_20210616_2100.py  0004_auto_20210616_2106.py  0005_alter_book_genre.py  0006_bookinstance_borrower.py  0007_alter_bookinstance_options.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html  book_confirm_delete.html  book_detail.html  book_list.html  book_renew_librarian.html  bookinstance_list_borrowed_staff.html  index.html
frontend/templates/: base_generic.html  index.html
frontend/templatetags/: get_count.py
locallibrary/: settings.py  urls.py
theme/static_src/: package-lock.json  package.json  tailwind.config.js
