[tool.poetry]
name = "library-me"
version = "0.1.0"
description = ""
authors = ["Muhammad Iqbal <iqbal.adudu@gmail.com>"]
readme = "README.md"
packages = [{include = "library_me"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-tailwind = {extras = ["reload"], version = "^3.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
